--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 					<nav id="navbar" class="navbar order-last order-lg-0">
 						<ul>
 							<li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-							<li><a class="nav-link scrollto" href="#about">Produtos</a></li>
+							<li><a class="nav-link scrollto" href="#produtos">Produtos</a></li>
 							<li><a class="nav-link scrollto" href="#services">Serviços</a></li>
 							<li><a class="nav-link scrollto " href="#portfolio">Sobre nós</a></li>
 						</ul>
@@ -92,4 +92,4 @@
 		<!-- Template Main JS File -->
 		<script src="assets/js/main.js"></script>
 	</body>
-</html>
+	</html>
